2003-10-23 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/z80/ralloc.c (joinPushes): Fixed bug #828742

2003-10-23 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCmain.c,
	* sdccconf_in.h: Fixed bug #828387 (--disable-hc08-port didn't work)
	* src/mcs51/gen.c (gencjneshort),
	* src/ds390/gen.c (gencjneshort): Made comparison with AOP_IMMD operand
	more efficient (per Scott Bronson's suggestion)

2003-10-22 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	Extended the semantics of the critical keyword to include
	individual statements. See RFE #827755 and #799831
	* src/SDCC.y
	* src/SDCCicode.c
	* src/SDCCopt.c
	* src/SDCCast.c
	* support/Util/SDCCerr.c
	* support/Util/SDCCerr.h
	* src/mcs51/gen.c
	* src/ds390/gen.c
	* src/hc08/gen.c

2003-10-19  Borut Razem <borut.razem@siol.net>

	* src/SDCC.lex: fixed bug #825944 - defined yytext_ptr to make it compile with flex 2.5.31

2003-10-19 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCicode.c (geniCodePreInc, geniCodePreDec, ast2iCode):
	Fixed bug #818696
	* src/SDCCast.c (ast_print): Fixed --dumptree so that preincrement
	and predecrement operand is displayed

2003-10-13 Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCval.c (valMinus): fixed bug #826041

2003-10-15 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	Some hc08 related updates that I missed earlier
	* sim/ucsim/stypes.h
        * support/regression/ports/hc08/spec.mk

2003-10-15 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	New target "hc08" for the Motorola 68hc08 family of micros

	* configure
	* configure.in
	* Makefile
	* src/hc08/*
	* src/SDCCmain.c
	* src/port.h
	* sim/ucsim/hc08.src/*
	* sim/ucsim/configure.in
	* src/ucsim/configure
	* sim/ucsim/packages_in.mk
	* as/hc08/*
	* as/Makefile
	* device/include/mc68hc908qy.h
	* device/lib/hc08/*
	* device/lib/Makefile.in
	* support/regression/ports/hc08/*
	* support/regression/Makefile

2003-10-14 Erik Petrich <epetrich@ivorytower.norman.ok.us>
